# PyKotorGL

./: pyproject.toml  recommended.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
src/PyKotorGL.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/pykotor/gl/: modern_renderer.py
src/pykotor/gl/models/: mdl.py  mesh.py  model.py
src/pykotor/gl/native/: __init__.py  fastmath.py
src/pykotor/gl/native/__pycache__/: _cffi__x91c9641bx774e66ba.c
src/pykotor/gl/scene/: async_loader.py  camera.py  camera_controller.py  frustum.py  render_object.py  scene.py  scene_base.py  scene_cache.py
src/pykotor/gl/shader/: shader.py  texture.py
